# secure-mpc

./: .gitignore  CMakeLists.txt  README.md  install.sh
CF/: CMakeLists.txt
CF/cmake/: common.cmake
docker/: Dockerfile  build.sh  run.sh
scripts/: build_libs.sh  run_all_multimachine.sh
src/: ag2pc_auction.cc  agmpc_multiatt_auction.cc  agmpc_multiatt_circuit_generator.cc  circuit_generator.cc  plain_singleatt_auction.cc  sh2pc_auction.cc  sh2pc_auction_benchmark.cc  sh2pc_noop_benchmark.cc  sh2pc_noop_circuit_benchmark.cc  sh2pc_noop_circuit_generator.cc
